# arkflow

./: .dockerignore  CLAUDE.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: doc-deploy.yml  docker.yml  rust.yml  test-doc-deploy.yml
crates/arkflow/: Cargo.toml
crates/arkflow-core/: Cargo.toml
crates/arkflow-core/src/: config.rs  error_helpers.rs  lib.rs  message_batch_tests.rs
crates/arkflow-core/src/buffer/: mod.rs
crates/arkflow-core/src/cli/: mod.rs
crates/arkflow-core/src/codec/: mod.rs
crates/arkflow-core/src/engine/: mod.rs
crates/arkflow-core/src/input/: mod.rs
crates/arkflow-core/src/output/: mod.rs
crates/arkflow-core/src/pipeline/: mod.rs
crates/arkflow-core/src/processor/: mod.rs
crates/arkflow-core/src/processor/udf/: mod.rs
crates/arkflow-core/src/stream/: mod.rs
crates/arkflow-core/src/temporary/: mod.rs
crates/arkflow-core/tests/: codec_input_test.rs  zero_clone_test.rs
crates/arkflow-plugin/: Cargo.toml
crates/arkflow-plugin/src/: auth_middleware.rs  context_pool.rs  lib.rs  rate_limiter.rs
crates/arkflow-plugin/src/buffer/: join.rs  memory.rs  mod.rs  session_window.rs  sliding_window.rs  tumbling_window.rs  window.rs
crates/arkflow-plugin/src/codec/: json.rs  mod.rs  protobuf.rs
crates/arkflow-plugin/src/component/: json.rs  mod.rs  protobuf.rs  redis.rs  sql.rs
crates/arkflow-plugin/src/expr/: mod.rs
crates/arkflow-plugin/src/input/: codec_helper.rs  file.rs  generate.rs  http.rs  kafka.rs  memory.rs  mod.rs  modbus.rs  mqtt.rs  multiple_inputs.rs  nats.rs  pulsar.rs  redis.rs  sql.rs  websocket.rs
crates/arkflow-plugin/src/output/: codec_helper.rs  drop.rs  file.rs  http.rs  influxdb.rs  kafka.rs  mod.rs  mqtt.rs  nats.rs  pulsar.rs  redis.rs  sql.rs  stdout.rs
crates/arkflow-plugin/src/processor/: batch.rs  json.rs  mod.rs  protobuf.rs  python.rs  sql.rs  vrl.rs
crates/arkflow-plugin/src/processor/udf/: aggregate_udf.rs  scalar_udf.rs  window_udf.rs
crates/arkflow-plugin/src/pulsar/: common.rs  mod.rs
crates/arkflow-plugin/src/temporary/: mod.rs  redis.rs
crates/arkflow-plugin/src/time/: mod.rs
crates/arkflow-plugin/src/udf/: mod.rs  scalar_udf.rs
crates/arkflow-plugin/tests/: kafka_codec_test.rs  pulsar_tests.rs
crates/arkflow/src/: main.rs
docker/: Dockerfile
docs/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
docs/blog/: authors.yml
docs/blog/2024/03/: 30-v0.2.0.md
docs/blog/2024/04/: 01-v0.2.0-rc1.md  13-v0.2.0-release.md
docs/blog/2025/04/: 01-v0.2.0-rc1.md
docs/blog/2025/05/: 09-v0.3.0-release.md
docs/blog/2025/06/: 14-ArkFlow+Python-Easy-Real-time-AI.md  14-ArkFlow+Python: Easy Real-time AI.md
docs/docs/: 0-intro.md  intro.md
docs/docs/components/: _category_.json
docs/docs/components/0-inputs/: file.md  generate.md  http.md  kafka.md  mqtt.md  pulsar.md  sql.md  websocket.md
docs/docs/components/1-buffers/: _category_.json  join.md  memory.md  session_window.md  sliding_window.md  tumbling_window.md
docs/docs/components/2-processors/: batch.md  json.md  protobuf.md  python.md  sql.md  vrl.md
docs/docs/components/3-outputs/: http.md  influxdb.md  kafka.md  mqtt.md  pulsar.md  redis.md  sql.md
docs/docs/deploy/k8s/: deployment.md
docs/docs/sql/: 1-operators.md  _category_.json
docs/src/components/HomepageFeatures/: index.tsx  styles.module.css
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/versioned_docs/version-0.2.x/components/0-inputs/: _category_.json  kafka.md  memory.md
docs/versioned_docs/version-0.2.x/components/2-processors/: json.md
docs/versioned_docs/version-0.2.x/components/3-outputs/: drop.md
docs/versioned_docs/version-0.2.x/sql/: 2-select.md
docs/versioned_docs/version-0.3.x/: 999-about-logo.md
docs/versioned_docs/version-0.3.x/components/0-inputs/: generate.md  http.md  nats.md  redis.md  sql.md
docs/versioned_docs/version-0.3.x/components/1-buffers/: session_window.md
docs/versioned_docs/version-0.3.x/components/2-processors/: protobuf.md
docs/versioned_docs/version-0.3.x/components/3-outputs/: nats.md  stdout.md
docs/versioned_docs/version-0.3.x/deploy/: _category_.json
docs/versioned_docs/version-0.3.x/sql/: 4-subqueries.md  8-special_functions.md  9-udf.md
docs/versioned_docs/version-0.5.x/: 0-intro.md
docs/versioned_docs/version-0.5.x/components/0-inputs/: modbus.md  multiple_inputs.md
docs/versioned_docs/version-0.5.x/components/1-buffers/: tumbling_window.md
docs/versioned_docs/version-0.5.x/components/2-processors/: _category_.json  sql.md
docs/versioned_docs/version-0.5.x/components/3-outputs/: _category_.json  mqtt.md
docs/versioned_docs/version-0.5.x/components/4-temporary/: _category_.json  redis.md
docs/versioned_docs/version-0.5.x/sql/: 0-data-types.md  5-aggregate_functions.md  6-window_functions.md  7-scalar_functions.md
examples/: drop_output_example.yaml  generate_example.yaml  http_client_example.yaml  http_server_example.yaml  join_buffer_example.yaml  kafka_example.yaml  mqtt_example.yaml  nats_input_example.yaml  nats_output_example.yaml  protobuf_example.yaml  python_processor_example.yaml  redis_input_example.yaml  redis_output_example.yaml  redis_temporary_example.yaml  sql_input_example.yaml  sql_output_example.yaml  stream_sql_example.yaml  vrl_example.yaml  websocket_input_example.yaml
examples/python/: example1.py
src/output/: kafka.rs  mqtt.rs  stdout.rs
