[workspace.package]
version = "0.5.0"
edition = "2021"
description = "High-performance Rust flow processing engine"
authors = ["chenquan <chenquan.dev@gmail.com>"]
repository = "https://github.com/arkflow-rs/arkflow"
homepage = "https://github.com/arkflow-rs/arkflow"
license = "Apache-2.0"
rust-version = "1.88"

[workspace]
members = ["crates/arkflow-plugin", "crates/arkflow-core", "crates/arkflow"]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.17"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
humantime = "2.3.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "json"] }
prometheus = "0.13"
datafusion = { version = "47", features = ["avro", "pyarrow"] }
datafusion-functions-json = "0.47.0"
arrow-json = "55"
prost-reflect = "0.16.3"
prost-types = "0.14.1"
protobuf-parse = "3.7.2"
protobuf = "3.7.2"
toml = "0.9"
lazy_static = "1.4"
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
flume = "=0.11"

# Sql
sqlx = { version = "0.8", features = ["mysql", "postgres", "runtime-tokio", "tls-native-tls"] }

tempfile = "3.23.0"
mockall = "0.14"
arkflow-core = { path = "crates/arkflow-core" }
arkflow-plugin = { path = "crates/arkflow-plugin" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
