[package]
name = "arkflow-plugin"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
async-trait = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
humantime = { workspace = true }
tracing = { workspace = true }
datafusion = { workspace = true }
datafusion-functions-json = "*"
datafusion-table-providers = { version = "0.4", features = [
    "mysql",
    "postgres",
    "duckdb",
    "sqlite",
] }
ballista = { git = "https://github.com/apache/datafusion-ballista", rev = "f75ec91b4e1385213329809be84787a3f7fbeab5" }
spiceai_duckdb_fork = "=1.2.1"
arrow-json = { workspace = true }
prost-reflect = { workspace = true }
prost-types = { workspace = true }
protobuf-parse = { workspace = true }
protobuf = { workspace = true }
lazy_static = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower = "0.5"
tower-http = { version = "0.4", features = ["cors", "trace"] }
base64 = "0.22"
colored = { workspace = true }
flume = { workspace = true }
rumqttc = "0.24.0"

# Kafka
aws-msk-iam-sasl-signer = "1.0.0"
rdkafka = { version = "0.37", features = [
    "cmake-build",
    "tracing",
    "sasl",
    "ssl-vendored",
    "zstd",
] }
rdkafka-sys = "4.8.0"
sasl2-sys = { version = "0.1.22", features = ["vendored"] }
redis = { version = "0.24", features = ["tokio-comp", "aio"] }

# vrl https://github.com/vectordotdev/vrl
vrl = { version = "0.23.0", features = ["value", "compiler", "stdlib"] }


# arkflow
arkflow-core = { workspace = true }

# Websocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

url = "2.5.4"
[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
