[package]
name = "arkflow"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
tokio = { workspace = true}

# arkflow
arkflow-core = { workspace = true }
arkflow-plugin = { workspace = true }
